# 2dge

./: .gitignore  CMakeLists.txt  README.md
assets/scripts/: level_1.lua
src/: CMakeLists.txt  asset_store.cpp  asset_store.hpp  game.cpp  game.hpp  level_loader.cpp  level_loader.hpp  logger.cpp  logger.hpp  main.cpp
src/components/: animation_component.hpp  box_collider_component.hpp  camera_follow_component.hpp  health_component.hpp  keyboard_control_component.hpp  projectile_component.hpp  projectile_emitter_component.hpp  rigid_body_component.hpp  script_component.hpp  sprite_component.hpp  text_label_component.hpp  transform_component.hpp
src/ecs/: component.cpp  component.hpp  ecs.hpp  entity.hpp  pool.hpp  registry.cpp  registry.hpp  system.cpp  system.hpp
src/event_bus/: event.hpp  event_bus.hpp
src/events/: collision_event.hpp  key_pressed_event.hpp
src/systems/: animation_system.hpp  camera_movement_system.hpp  collision_system.hpp  damage_system.hpp  dameage_system.hpp  keyboard_control_system.hpp  movement_system.hpp  projectile_emitter_system.hpp  projectile_lifecycle_system.hpp  render_collider_system.hpp  render_gui_system.hpp  render_health_bar_system.hpp  render_system.hpp  render_text_system.hpp  script_system.hpp
